fix: spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 #footer-text {
     color: #888;
+    margin-top: 0;
+}
+
+p {
+    margin: 16px 0;
+} 
+
+p:last-of-type {
+    margin-bottom: 8px;
 }
 
 #footer-text a {
@@ -10,7 +19,11 @@
 
 @media (hover: hover) {
     a:hover {
-        font-weight: bold;
+        cursor: pointer;
     }
+}
+
+a {
+    cursor: pointer;
 }
 
